exports[`test should return messages object with default messageKey 1`] = `
Object {
  "Creator": Array [
    Object {
      "defaultMessage": "Creator",
      "description": "Creator 1",
      "filename": "./test/messages/src/containers/App/App.json",
      "id": "App.Creator 1",
    },
    Object {
      "defaultMessage": "Creator",
      "description": "Creator 2",
      "filename": "./test/messages/src/containers/App/App.json",
      "id": "App.Creator 2",
    },
    Object {
      "defaultMessage": "Creator",
      "description": "Creator",
      "filename": "./test/messages/src/containers/NotFound/messages.json",
      "id": "NotFound.Creator",
    },
  ],
  "Go to MCS website": Array [
    Object {
      "defaultMessage": "Go to MCS website",
      "description": "Click error Button",
      "filename": "./test/messages/src/containers/App/App.json",
      "id": "App.errorButton",
    },
    Object {
      "defaultMessage": "Go to MCS website",
      "description": "Click error Button",
      "filename": "./test/messages/src/containers/NotFound/messages.json",
      "id": "NotFound.errorButton",
    },
  ],
  "The device is now private or deleted.": Array [
    Object {
      "defaultMessage": "The device is now private or deleted.",
      "description": "The error message when api response as 404 not found",
      "filename": "./test/messages/src/containers/App/App.json",
      "id": "App.errorMessage",
    },
  ],
}
`;

exports[`test should return messages object with description as key 1`] = `
Object {
  "Click error Button": Array [
    Object {
      "defaultMessage": "Go to MCS website",
      "description": "Click error Button",
      "filename": "./test/messages/src/containers/App/App.json",
      "id": "App.errorButton",
    },
  ],
  "Creator 1": Array [
    Object {
      "defaultMessage": "Creator",
      "description": "Creator 1",
      "filename": "./test/messages/src/containers/App/App.json",
      "id": "App.Creator 1",
    },
  ],
  "Creator 2": Array [
    Object {
      "defaultMessage": "Creator",
      "description": "Creator 2",
      "filename": "./test/messages/src/containers/App/App.json",
      "id": "App.Creator 2",
    },
  ],
  "The error message when api response as 404 not found": Array [
    Object {
      "defaultMessage": "The device is now private or deleted.",
      "description": "The error message when api response as 404 not found",
      "filename": "./test/messages/src/containers/App/App.json",
      "id": "App.errorMessage",
    },
  ],
}
`;

exports[`test should return messages object with id as key 1`] = `
Object {
  "App.Creator 1": Array [
    Object {
      "defaultMessage": "Creator",
      "description": "Creator 1",
      "filename": "./test/messages/src/containers/App/App.json",
      "id": "App.Creator 1",
    },
  ],
  "App.Creator 2": Array [
    Object {
      "defaultMessage": "Creator",
      "description": "Creator 2",
      "filename": "./test/messages/src/containers/App/App.json",
      "id": "App.Creator 2",
    },
  ],
  "App.errorButton": Array [
    Object {
      "defaultMessage": "Go to MCS website",
      "description": "Click error Button",
      "filename": "./test/messages/src/containers/App/App.json",
      "id": "App.errorButton",
    },
  ],
  "App.errorMessage": Array [
    Object {
      "defaultMessage": "The device is now private or deleted.",
      "description": "The error message when api response as 404 not found",
      "filename": "./test/messages/src/containers/App/App.json",
      "id": "App.errorMessage",
    },
  ],
  "NotFound.Creator": Array [
    Object {
      "defaultMessage": "Creator",
      "description": "Creator",
      "filename": "./test/messages/src/containers/NotFound/messages.json",
      "id": "NotFound.Creator",
    },
  ],
  "NotFound.errorButton": Array [
    Object {
      "defaultMessage": "Go to MCS website",
      "description": "Click error Button",
      "filename": "./test/messages/src/containers/NotFound/messages.json",
      "id": "NotFound.errorButton",
    },
  ],
}
`;
